# FlowSentinel

./: README.md
flowsentinel/: AGENTS.md  Dockerfile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml
flowsentinel/scratch/: test_metrics.py
flowsentinel/scripts/: run_demo.py
flowsentinel/src/flowsentinel/: config.py  main.py  models.py  pipeline.py
flowsentinel/src/flowsentinel/alerting/: base.py  local_test_receiver.py  telegram_sink.py  webhook_sink.py
flowsentinel/src/flowsentinel/detection/: liquidity_scorer.py  predictive.py  sandwich_detector.py
flowsentinel/src/flowsentinel/feeds/: base.py  real_stub.py  simulated.py
flowsentinel/src/flowsentinel/llm/: classifier.py  narrative.py  schemas.py
flowsentinel/src/flowsentinel/llm/prompts/: classification_system.md  narrative_system.md
flowsentinel/src/flowsentinel/observability/: logging_setup.py  metrics.py  server.py
flowsentinel/src/flowsentinel/storage/: redis_client.py  timescale.py
flowsentinel/src/flowsentinel/storage/migrations/: 001_init.sql
flowsentinel/tests/: test_liquidity_scorer.py  test_llm_classifier_mocked.py  test_llm_live_smoke.py  test_models.py  test_pipeline_backpressure.py  test_predictive.py  test_redis_dedup.py  test_rule_based_classifier.py  test_sandwich_detector.py  test_simulated_feeds.py
