[project]
name = "flowsentinel"
version = "0.1.0"
description = "Asynchronous multi-venue mempool and liquidity watchtower engine for MEV anomaly detection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "anthropic>=0.25.0",
    "tenacity>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
    "httpx>=0.25.0",
    "uvloop>=0.19.0; sys_platform != 'win32'"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.20.0",
    "ruff>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires docker services)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flowsentinel"]

